--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
         <title>こんにちは</title>
     </head>
     <body>
-        Hello World!<br>
+        Hello World! 2nd<br>
         Templatesから読み込まれました。
     </body>
 </html>
